<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ten"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:text="@string/text_result"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ten_check"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/five"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:gravity="start"
        android:text="@string/text_result"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/five_check"
        app:layout_constraintTop_toBottomOf="@+id/ten" />

    <TextView
        android:id="@+id/two"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:gravity="start"
        android:text="@string/text_result"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/two_check"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <TextView
        android:id="@+id/one"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:gravity="start"
        android:text="@string/text_result"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/one_check"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <TextView
        android:id="@+id/cents"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:gravity="start"
        android:text="@string/text_result"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/cents_check"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <TextView
        android:id="@+id/change_result"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/change_result"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/twenty" />

    <TextView
        android:id="@+id/discount_result"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="45dp"
        android:gravity="start"
        android:text="@string/discounted_money_result"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/cents_check" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/text_coins"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:onClick="calculateChange"
        android:text="@string/button_calculate"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discounts" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_bills"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/thousand"
        android:layout_width="100sp"
        android:layout_height="25sp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:text="@string/text_result"
        android:textColor="#895EE0"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/thousand_check"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/five_hundred"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:gravity="start"
        android:text="@string/text_result"
        android:textColor="#7C3D3D"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/five_hundred_check"
        app:layout_constraintTop_toBottomOf="@+id/thousand" />

    <TextView
        android:id="@+id/one_hundred"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:gravity="start"
        android:text="@string/text_result"
        android:textColor="#CFA94A"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/two_hundred_check"
        app:layout_constraintTop_toBottomOf="@+id/two_hundred" />

    <TextView
        android:id="@+id/fifty"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:gravity="start"
        android:text="@string/text_result"
        android:textColor="#C75BB5"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/one_hundred_check"
        app:layout_constraintTop_toBottomOf="@+id/one_hundred" />

    <TextView
        android:id="@+id/two_hundred"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:gravity="start"
        android:text="@string/text_result"
        android:textColor="#40723D"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/two_hundred_check"
        app:layout_constraintTop_toBottomOf="@+id/five_hundred" />

    <TextView
        android:id="@+id/twenty"
        android:layout_width="100sp"
        android:layout_height="25dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:gravity="start"
        android:text="@string/text_result"
        android:textColor="#34A2CF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/fifty_check"
        app:layout_constraintTop_toBottomOf="@+id/fifty" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/change_text"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twenty" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/discounted_money_text"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cents_check" />

    <CheckBox
        android:id="@+id/thousand_check"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:gravity="end"
        android:text="@string/text_thounsand"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/five_hundred_check"
        android:layout_width="76dp"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:checked="true"
        android:gravity="end"
        android:text="@string/text_five_hundred"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thousand_check" />

    <CheckBox
        android:id="@+id/two_hundred_check"
        android:layout_width="76sp"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:checked="true"
        android:gravity="end"
        android:text="@string/text_two_hundred"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/five_hundred_check" />

    <CheckBox
        android:id="@+id/one_hundred_check"
        android:layout_width="76sp"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:checked="true"
        android:gravity="end"
        android:text="@string/text_one_hundred"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_hundred_check" />

    <CheckBox
        android:id="@+id/fifty_check"
        android:layout_width="76sp"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:checked="true"
        android:gravity="end"
        android:text="@string/text_fifty"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_hundred_check" />

    <CheckBox
        android:id="@+id/twenty_check"
        android:layout_width="76sp"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:checked="true"
        android:gravity="end"
        android:text="@string/text_twenty"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifty_check" />

    <CheckBox
        android:id="@+id/ten_check"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:checked="true"
        android:gravity="end"
        android:text="@string/text_ten"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <CheckBox
        android:id="@+id/five_check"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:checked="true"
        android:gravity="end"
        android:text="@string/text_five"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ten_check" />

    <CheckBox
        android:id="@+id/two_check"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:checked="true"
        android:gravity="end"
        android:text="@string/text_two"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/five_check" />

    <CheckBox
        android:id="@+id/one_check"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:checked="true"
        android:gravity="end"
        android:text="@string/text_one"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_check" />

    <CheckBox
        android:id="@+id/cents_check"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:checked="true"
        android:gravity="end"
        android:text="@string/text_cents"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_check" />

    <Spinner
        android:id="@+id/discounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:entries="@array/discouts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_discount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

</androidx.constraintlayout.widget.ConstraintLayout>